# Uwe

./: .gitignore  CMakeLists.txt  NOTICE  README.md  cpp.hint  vc140.idb
.github/workflows/: cmake-multi-platform.yml
modules/: lexer.cppm  logger.cppm  parser.cppm  vm.cppm
src/: ir.cpp  ir.hpp  main.cpp
